# playlite

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.json  .vercelignore  ADR.md  ARCHITECTURE.md  AgeRating.md  CHANGELOG.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  DEV_LOG.md  FORMATTER_SETUP.md  GENRE_FIX.md  LICENSE  LIMPEZA_OPCIONAL.md  Links.md  MUDANCAS_METADADOS.md  PLAYLITE_RELEASE_GUIDE.md  README.md  README.pt-BR.md  REPOSITORY.md  ROADMAP.md  ResumoFinal.md  SteamReview.md  TimeGame.md  eslint.config.js  estrutura.txt  hltb.txt  index.html  integration.md  package-lock.json  package.json  project-structure.txt  rghdrg.rs  tsconfig.json  typedoc.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: collaborative_index.json
src-tauri/src/: commands.rs  constants.rs  crypto.rs  database.rs  errors.rs  initialization.rs  lib.rs  main.rs  models.rs  scrapers.rs  secrets.rs  secrets.rs.example  security.rs  services.rs  sources.rs  storage.rs  utils.rs
src-tauri/src/commands/: achievements.rs  ai_translation.rs  backup.rs  cache.rs  caches.rs  cover_enrichment.rs  enrichment_shared.rs  games.rs  integrations.rs  metadata.rs  metadata_enrichment.rs  metadata_reflesh.rs  metadata_search.rs  mod.rs  plataforms.rs  platforms.rs  recommendation.rs  recommendation_analysis.rs.old  recommendations.rs  recommendations.rs.old  settings.rs  subscriptions.rs  system.rs  user_preferences.rs  version.rs  wishlist.rs
src-tauri/src/data/: battle_net_games.json  known_series.json  tag_metadata.json
src-tauri/src/database/: backup.rs  configs.rs  core.rs  migrations.rs
src-tauri/src/scrapers/: ea_play.rs  (+3 more)
(+1351 files in other folders)
