[package]
name = "Playlite"
version = "3.0.0"
description = "Game Manager Application with Tauri and Rust"
authors = ["Alan Goncalves"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "game_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = [] }
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tauri-plugin-store = "2.4.1"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1.3"
tauri-plugin-shell = "2.3"
lazy_static = "1.5.0"
url = "2.5.7"
aes-gcm = "0.10.3"
rand = "0.9.2"
tauri-plugin-dialog = "2.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
tauri-plugin-machine-uid = "0.1.3"
sha2 = "0.10.9"
once_cell = "1.21.3"
whoami = "2.0.0"
base64 = "0.22.1"
uuid = { version = "1.19.0", features = ["v4"] }
tiny_http = "0.12.0"
regex = "1.12.2"
thiserror = "2.0.18"
anyhow = "1.0.100"
log = "0.4.29"
tauri-plugin-updater = "2.10.0"
